--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	   <!-- Navigation Section -->
+    <nav role="navigation">
+      <ul role="list">
+        <li role="listitem"><a href="#home">Home</a></li>
+        <li role="listitem"><a href="#about">About</a></li>
+        <li role="listitem"><a href="#projects">Projects</a></li>
+        <li role="listitem"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Heading Section -->
+    <header>
+      <h1 role="heading">Welcome to My Portfolio</h1>
+    </header>
+
+    <!-- Image Section -->
+    <section id="about">
+      <img role="img" src="https://via.placeholder.com/300" alt="Portrait of the portfolio owner">
+      <p>
+        Hello! I’m a passionate web developer who loves creating accessible and user-friendly websites.
+      </p>
+    </section>
+
+    <!-- Project List -->
+    <section id="projects">
+      <h2 role="heading">My Skills</h2>
+      <ul role="list">
+        <li role="listitem">HTML5, CSS3, and JavaScript</li>
+        <li role="listitem">React and Node.js</li>
+        <li role="listitem">Responsive Web Design</li>
+      </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
